# magic_query_tool

./: .gitignore  White.txt  White.txt:Zone.Identifier  main.py  pyproject.toml
